--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="css/sign-in.css" rel="stylesheet">
+    <link href="/public/css/sign-in.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
@@ -169,7 +169,7 @@
 
     <main class="form-signin w-100 m-auto">
         <form action="/" method="post">
-            <img class="mb-4" src="images/glphy.52f7035 (1).svg" alt="" width="84" height="64">
+            <img class="mb-4" src="/public/images/glphy.52f7035 (1).svg" alt="" width="84" height="64">
             <h1 class="h3 mb-3 fw-normal">Sign up to my Newsletter</h1>
             <input type="text" name="fname" class="form-control" placeholder="First name" required autofocus>
             <input type="text" name="lname" class="form-control" placeholder="Last name" required>
